stop image_collection action bar from covering images/buttons

--- a/app/assets/stylesheets/spina/_gallery.sass
+++ b/app/assets/stylesheets/spina/_gallery.sass
@@ -187,15 +187,17 @@
       opacity: .7
 
   .gallery-select-action-bar
+    align-items: center
     background: #fff
     border-top: 1px solid #e5e5e5
-    bottom: 0px
     clear: both
-    margin: 0 -12px
-    padding: 12px
-    position: absolute
-    width: 100%
-    z-index: 3
+    display: flex
+    justify-content: flex-end
+    margin-top: 12px
+    padding: 12px 12px 0
+
+    .button
+      margin: 0
 
 // Customfile
 
